# case-to-clearance

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  deploy.sh  docker-compose.yml  nginx.conf  plan.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py  storage.py
app/chains/: __init__.py  extraction.py  intake.py  json_fix.py  prompts.py  triage.py  workflow.py
app/data/: __init__.py  agencies.json  procedures.json  required_docs_by_procedure.json  scoring_rules.json
app/guardrails/: __init__.py  number_checker.py  output_validator.py
app/huawei/: __init__.py  maas.py  ocr.py
app/middleware/: __init__.py  error_handlers.py  rate_limiting.py
app/observability/: __init__.py  tracer.py
app/rules/: __init__.py  scoring.py  validations.py
app/schemas/: casefile.json  extraction_bl.json  extraction_declaration.json  extraction_invoice.json  extraction_packing_list.json  intake_output.json  triage_explanation.json
app/ui/static/: app.js  styles.css
app/utils/: json_repair.py  retry.py
demo/: demo_script.md
samples/: README.md
samples/text_fallback/: bl_happy.txt  declaration_fraudish.txt  declaration_happy.txt  invoice_fraudish.txt  invoice_happy.txt  packing_happy.txt
scripts/: create_demo_docs.py  run_e2e_test.py  test_workflows.py
test_results/: e2e_report_20260203_151203.json  e2e_report_20260203_153000.json  workflow_report_20260203_153829.json
tests/: __init__.py  conftest.py  test_api.py  test_schemas.py  test_scoring.py  test_validations.py
(+6 files in other folders)
